2018-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to disable automatic conversion to local currency (when optimal conversion activated)

2018-08-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix f(x)+a=a (e.g. x+1=1)
	* Fix automatic unit conversion after RPN stack calculations

2018-08-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Polar and exponential complex number forms

2018-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix ignore comma for RPN syntax

2018-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix ln(-i)

2018-07-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix display of negative number interval with +/- interval display when uncertainty is lower than global precision
	* Fix display of addition with negative non-integer number (show "x - a" instead of "x + -a")

2018-06-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not automatically update all exchange rates sources if not needed

2018-06-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use mycurrency.net html instead of the json data, which has not been for a month

2018-06-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Only use two's complement representation for integers
	* Use a * base^b for extremely long numbers in bases other than decimal

2018-06-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* When using two's complement representation on negative non-integers,
	  use the same number of decimals as without two's complement representation
	* Fix round() for negative rational numbers!

2018-06-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interpret 5m 7cm (and similar, for m and L) as 5m+7cm, and 3h 5min (and similar) as 3h+5min
	* Interpret m2 and m3 as m^2 and m^3 (as before), but m4 as m*4

2018-05-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Treat definitions in non-standard user files as global (not directly editable), in order to avoid duplication