@@ -1,3 +1,7 @@
+2018-09-18 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add magnitude() and hadamard() functions
+
 2018-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Option to disable automatic conversion to local currency (when optimal conversion activated)
